// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination[Base] should render correctly  1`] = `
<div
  class="c-5q20e4 soui-pagination-pagination c-alcznz soui-pagination-left"
>
  <div
    class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
  >
    <button
      class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      <span
        class="c-alexwd soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      1
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      2
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      3
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      4
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      5
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      <span
        class="c-alexwd soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text"
      dir="ltr"
      type="button"
    >
      1000
    </button>
    <button
      class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      <span
        class="c-alexwd soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about align 1`] = `
<div>
  <div
    class="c-5q20e4 soui-pagination-pagination c-alcznz soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
    >
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-5q20e4 soui-pagination-pagination c-r1xnlt soui-pagination-center"
    style="margin-bottom: 24px;"
  >
    <div
      class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
    >
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-5q20e4 soui-pagination-pagination cquqwaa soui-pagination-right"
  >
    <div
      class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
    >
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about control 1`] = `
<div>
  <div
    style="display: flex; align-items: center; margin-bottom: 24px;"
  >
    <span
      style="font-size: 14px;"
    >
      Jump to
    </span>
    <div
      class="c-g88j7i soui-input-wrapper-number cdi0lqx soui-input-wrapper"
      data-soui-input-border="true"
      style="width: 80px; margin-inline-start: 8px;"
    >
      <div
        class="c-etsxty soui-input-wrapper-inner-title-top c-4unot6 soui-input-wrapper-inner-title-bottom criccmr soui-input-wrapper-padding-box c2ulxq7 soui-input-content"
      >
        <input
          class="c-nmr774 soui-input-input"
          type="text"
          value="1"
        />
      </div>
      <div
        class="cjatkrz soui-input-number-step"
      >
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="c-5q20e4 soui-pagination-pagination c-alcznz soui-pagination-left"
  >
    <div
      class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
    >
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about disabled 1`] = `
<div
  class="c-5q20e4 soui-pagination-pagination c-alcznz soui-pagination-left"
>
  <div
    class="czac20r soui-pagination-section"
  >
    <span>
      total 500
    </span>
  </div>
  <div
    class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
  >
    <button
      class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      <span
        class="c-alexwd soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button cn02o3i soui-button-disabled c-nkm8v5 soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      1
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      2
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      3
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      4
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      5
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      <span
        class="c-alexwd soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      50
    </button>
    <button
      class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      <span
        class="c-alexwd soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="czac20r soui-pagination-section cqrfr8p soui-pagination-size-list"
  >
    <div
      class="cgktm87 soui-select-wrapper c-nla659 soui-select-wrapper-disabled"
      data-soui-input-border="true"
    >
      <div
        class="c1gfzze soui-select-result-wrapper cfzxixt soui-select-wrapper-padding-box c-evxq9g soui-select-wrapper-inner-title-top c5rilw4 soui-select-wrapper-inner-title-bottom"
      >
        <div
          class="c-dh8iaf soui-select-result"
        >
          <div
            class="cu3gxvh soui-select-result-text-wrapper"
          >
            <span
              class="c-gtcgyr soui-select-ellipsis"
            >
              10  / page
            </span>
          </div>
        </div>
        <div
          class="c-7kc73m soui-select-icon-wrapper"
        >
          <span
            class="c4afhhy soui-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="czac20r soui-pagination-section c-nhubaz soui-pagination-jumper"
  >
    <span
      class="czac20r soui-pagination-section"
    >
      Go to 
    </span>
    <div
      class="czac20r soui-pagination-section c-oczuyj soui-pagination-jumper-input cdi0lqx soui-input-wrapper c-4foj7v soui-input-wrapper-disabled"
      data-soui-input-border="true"
      style="width: 56px;"
    >
      <div
        class="c-etsxty soui-input-wrapper-inner-title-top c-4unot6 soui-input-wrapper-inner-title-bottom criccmr soui-input-wrapper-padding-box c2ulxq7 soui-input-content"
      >
        <input
          class="c-nmr774 soui-input-input"
          disabled=""
          type="text"
          value="1"
        />
      </div>
    </div>
    <span
      class="czac20r soui-pagination-section"
    >
       Page
    </span>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about jumper 1`] = `
<div
  class="c-5q20e4 soui-pagination-pagination c-alcznz soui-pagination-left"
>
  <div
    class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
  >
    <button
      class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      <span
        class="c-alexwd soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      1
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      2
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      3
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      4
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      5
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      <span
        class="c-alexwd soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      10
    </button>
    <button
      class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      <span
        class="c-alexwd soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="czac20r soui-pagination-section c-nhubaz soui-pagination-jumper"
  >
    <span
      class="czac20r soui-pagination-section"
    >
      Go to 
    </span>
    <div
      class="czac20r soui-pagination-section c-oczuyj soui-pagination-jumper-input cdi0lqx soui-input-wrapper"
      data-soui-input-border="true"
      style="width: 56px;"
    >
      <div
        class="c-etsxty soui-input-wrapper-inner-title-top c-4unot6 soui-input-wrapper-inner-title-bottom criccmr soui-input-wrapper-padding-box c2ulxq7 soui-input-content"
      >
        <input
          class="c-nmr774 soui-input-input"
          type="text"
          value="1"
        />
      </div>
    </div>
    <span
      class="czac20r soui-pagination-section"
    >
       Page
    </span>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about mode 1`] = `
<div>
  <div
    class="c-5q20e4 soui-pagination-pagination c-alcznz soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
    >
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-5q20e4 soui-pagination-pagination c-alcznz soui-pagination-left"
  >
    <div
      class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
    >
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled c-68omio soui-button-outline c-nkm8v5 soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-68omio soui-button-outline c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-68omio soui-button-outline c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-68omio soui-button-outline c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-68omio soui-button-outline c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-68omio soui-button-outline c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-68omio soui-button-outline c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button c-68omio soui-button-outline c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about simple 1`] = `
<div
  class="c-5q20e4 soui-pagination-pagination c-alcznz soui-pagination-left"
>
  <button
    class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
    dir="ltr"
    disabled=""
    type="button"
  >
    <span
      class="c-alexwd soui-pagination-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
        />
      </svg>
    </span>
  </button>
  <div
    class="czac20r soui-pagination-section c-nhubaz soui-pagination-jumper"
  >
    <div
      class="czac20r soui-pagination-section c-oczuyj soui-pagination-jumper-input cdi0lqx soui-input-wrapper"
      data-soui-input-border="true"
      style="width: 56px;"
    >
      <div
        class="c-etsxty soui-input-wrapper-inner-title-top c-4unot6 soui-input-wrapper-inner-title-bottom criccmr soui-input-wrapper-padding-box c2ulxq7 soui-input-content"
      >
        <input
          class="c-nmr774 soui-input-input"
          type="text"
          value="1"
        />
      </div>
    </div>
    <span
      class="czac20r soui-pagination-section cqvf9io soui-pagination-split"
    >
      /
    </span>
    <span
      class="czac20r soui-pagination-section"
    >
      5
    </span>
  </div>
  <button
    class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
    dir="ltr"
    type="button"
  >
    <span
      class="c-alexwd soui-pagination-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Pagination[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-5q20e4 soui-pagination-pagination c-alcznz soui-pagination-left cqvd4gt soui-pagination-small"
    style="margin-bottom: 24px;"
  >
    <div
      class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
    >
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square c-c7w797 soui-button-small"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-nkm8v5 soui-button-square c-c7w797 soui-button-small"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square c-c7w797 soui-button-small"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square c-c7w797 soui-button-small"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square c-c7w797 soui-button-small"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square c-c7w797 soui-button-small"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square c-c7w797 soui-button-small"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square c-c7w797 soui-button-small"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square c-c7w797 soui-button-small"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-5q20e4 soui-pagination-pagination c-alcznz soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
    >
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-5q20e4 soui-pagination-pagination c-alcznz soui-pagination-left cqrb8y9 soui-pagination-large"
  >
    <div
      class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
    >
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square c-cby2rr soui-button-large"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-nkm8v5 soui-button-square c-cby2rr soui-button-large"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square c-cby2rr soui-button-large"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square c-cby2rr soui-button-large"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square c-cby2rr soui-button-large"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square c-cby2rr soui-button-large"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square c-cby2rr soui-button-large"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square c-cby2rr soui-button-large"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square c-cby2rr soui-button-large"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about span 1`] = `
<div>
  <div
    class="c-5q20e4 soui-pagination-pagination c-alcznz soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
    >
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        6
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        7
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="c-5q20e4 soui-pagination-pagination c-alcznz soui-pagination-left"
  >
    <div
      class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
    >
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        6
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        7
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        8
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        9
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        11
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        12
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        13
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        14
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text"
        dir="ltr"
        type="button"
      >
        100
      </button>
      <button
        class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="c-alexwd soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about text 1`] = `
<div
  class="c-5q20e4 soui-pagination-pagination c-alcznz soui-pagination-left"
>
  <div
    class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
  >
    <button
      class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text"
      dir="ltr"
      disabled=""
      type="button"
    >
      <span>
        Previous
      </span>
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      1
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      2
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      3
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      4
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      5
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      <span
        class="c-alexwd soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      26
    </button>
    <button
      class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text"
      dir="ltr"
      type="button"
    >
      <span>
        Next
      </span>
    </button>
  </div>
  <div
    class="czac20r soui-pagination-section cqrfr8p soui-pagination-size-list"
  >
    <div
      class="cgktm87 soui-select-wrapper"
      data-soui-input-border="true"
      tabindex="0"
    >
      <div
        class="c1gfzze soui-select-result-wrapper cfzxixt soui-select-wrapper-padding-box c-evxq9g soui-select-wrapper-inner-title-top c5rilw4 soui-select-wrapper-inner-title-bottom"
      >
        <div
          class="c-dh8iaf soui-select-result"
        >
          <div
            class="cu3gxvh soui-select-result-text-wrapper"
          >
            <span
              class="c-gtcgyr soui-select-ellipsis"
            >
              10  / page
            </span>
          </div>
        </div>
        <div
          class="c-7kc73m soui-select-icon-wrapper"
        >
          <span
            class="c4afhhy soui-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="czac20r soui-pagination-section"
  >
    <span>
      1 to 10 of 256 items
    </span>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about total 1`] = `
<div
  class="c-5q20e4 soui-pagination-pagination c-alcznz soui-pagination-left"
>
  <div
    class="czac20r soui-pagination-section"
  >
    <span>
      total 500
    </span>
  </div>
  <div
    class="czac20r soui-pagination-section c6ozyzb soui-pagination-buttons"
  >
    <button
      class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      <span
        class="c-alexwd soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.29289 12.7071C6.93241 12.3466 6.90468 11.7794 7.2097 11.3871L7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289C15.0676 5.65338 15.0953 6.22061 14.7903 6.6129L14.7071 6.70711L10.1221 11.2928C9.7317 11.6835 9.7317 12.3165 10.1221 12.7072L14.7071 17.2929C15.0676 17.6534 15.0953 18.2206 14.7903 18.6129L14.7071 18.7071C14.3466 19.0676 13.7794 19.0953 13.3871 18.7903L13.2929 18.7071L7.29289 12.7071Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c6ujj5s soui-button-primary c-vk6w5o soui-button-button c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      1
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      2
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      3
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      4
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      5
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      <span
        class="c-alexwd soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10ZM12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10ZM19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      50
    </button>
    <button
      class="czac20r soui-pagination-section c-l9dx9t soui-pagination-button-item c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cb29e7j soui-button-text c-nkm8v5 soui-button-square"
      dir="ltr"
      type="button"
    >
      <span
        class="c-alexwd soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
